--- a/seek-mobile/package.json
+++ b/seek-mobile/package.json
@@ -27,9 +27,11 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
+    "@ionic/storage": "^2.2.0",
     "cordova-ios": "5.0.1",
     "cordova-plugin-crop": "^0.4.0",
     "cordova-plugin-telerik-imagepicker": "^2.3.3",
+    "cordova-sqlite-storage": "^3.4.0",
     "core-js": "^2.5.4",
     "firebase": "^7.0.0",
     "rxjs": "~6.5.1",
@@ -78,7 +80,8 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-sqlite-storage": {}
     },
     "platforms": [
       "ios"
